syntax = "proto3"; // the version of the protobuf
package conversation;

option go_package = "conversation/";

service Chat {
    rpc SendMessage(SendRequest) returns (SendReply) {}
}

message SendRequest {
    string content = 1;
    bytes senderID = 2;
}

message SendReply {
    string result = 1;
}
